tag and spacing fixed
fixed tag

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,6 +20,7 @@ body {
     font-weight: 500;
     font-size: 1.4rem;
     color: #e1e1e1 !important;
+    letter-spacing: 0.1rem;
 }
 
 @media screen and (max-width: 768px) {
